[package]
name = "rocket-mongo-file-center-raw-response"
version = "0.8.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/rocket-mongo-file-center-raw-response"
homepage = "https://magiclen.org/rocket-mongo-file-center-raw-response"
keywords = ["rocket", "server", "web", "mongodb", "etag"]
categories = ["web-programming"]
description = "This crate provides a response struct used for responding raw data from the File Center on MongoDB with **Etag** cache optionally."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = "0.5.0-rc.1"
url-escape = "0.1"

rocket-etag-if-none-match = "0.4"

mongo-file-center = { git = "https://github.com/magiclen/mongo-file-center" }

[dev-dependencies]
validators = "0.23"

[dev-dependencies.validators-derive]
version = "0.23"
default-features = false
features = ["base64_url", "rocket"]